fix horizontal alignment issue and status/search by spacing

--- a/src/components/ApplicantTable/ApplicantTable.module.css
+++ b/src/components/ApplicantTable/ApplicantTable.module.css
@@ -20,10 +20,6 @@
     font-size: 18px;
 }
 
-.searchFilter {
-    margin: -14px 0px 0px 20px;
-}
-
 .searchFilterText {
     width: 126px;
     height: 42px;
