--- a/src/screens/InfoSubmission/InfoSubmissionPage.module.css
+++ b/src/screens/InfoSubmission/InfoSubmissionPage.module.css
@@ -25,6 +25,7 @@
   right: 0px;
   left: 0px;
 }
+
 .mainContainer {
   padding: 4rem;
   border-radius: 0.5rem;
@@ -45,6 +46,17 @@
   transition: 0.3s;
   align-self:center;
   width:98%;
+}
+
+/* .MuiMenu-list {
+  display: flex;
+  flex-direction: column;
+} */
+
+.MuiList-root.MuiMenu-list {
+  display: flex;
+  flex-direction: column;
+  color:black;
 }
 
 .headerNoMargin {
